<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/rootView"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.notes.notes.edits.fragment.EditsFragment">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBar"
    style="@style/AppBarLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:menu="@menu/menu_edit"
      app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
      app:title="@string/edits_fragment_label" />
  </com.google.android.material.appbar.AppBarLayout>

  <EditText
    android:id="@+id/edittext_title"
    style="@style/Custom_EditText"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:hint="@string/title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/appBar" />

  <EditText
    android:id="@+id/edittext_body"
    style="@style/Custom_EditText"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:hint="@string/body"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/edittext_title" />

</androidx.constraintlayout.widget.ConstraintLayout>